# discord-verify

./: .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.changeset/: README.md  cli-executable-foundation.md  config.json  typed-cli-parser.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml
docs/: CLI_PARSER.md  PRD.md  TASKS.md  VERSIONING.md
examples/: README.md
examples/discordjs-advanced/: README.md
examples/discordjs-basic/: README.md
examples/discordpy-advanced/: README.md
examples/discordpy-basic/: README.md
python/discord_verify_bridge/: __init__.py
schemas/: README.md
scripts/: README.md  clean.mjs  validate-package-contents.mjs  validate-repository.mjs
scripts/.bootstrap-payload/: 00.b64  01.b64
tests/: README.md
tests/python/: test_bridge.py
tests/repository/: secret-fixture.test.ts
