[project]
name = "discord-verify-python-bridge"
version = "0.0.0"
description = "Development environment for the bundled discord.py bridge"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=discord_verify_bridge --cov-report=term-missing"
testpaths = ["tests/python"]
pythonpath = ["python"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["python", "tests/python"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "python"
packages = ["discord_verify_bridge"]
